- Fixed: Mountpoint module will no longer use the root location of an storage
  profile. Create folder within the storage location where client application
  can store its media.
- Added new unit test for testing jobscheduler parallel and serial job runs.
- Added update hook to mount point module to release all play links.
- Updated Drupal to 7.34.

MediaMosa 3.5.x (build 2072)
----------------------------
- Fixing default value for download server.
- Fixed <? tag into <?php on some templates (gives fatal error on PHP5.5).
- Downgraded log message for overflow cron tick to debug status.
- Fixed still generation tool_image.
- Upgraded Mediamosa rules integration.
- Fixed unittest with MIME-type.
- Fixed download mediafile to force download HTTP header, instead of triggering
  browser mime-type action.
- Fixed unittest using CURL file upload; will use CURLfile class when available
  (PHP5.5+).
- Update SDK and CK submodule. Use git submodule update.
- Upgraded Drupal to 7.24.
- CQL is extended with search on the is_private flag (useful for testing
  published status).
- Mimetype of the original mediafile is now normalized to the asset.
- CQL is extended with search on the mimetype of the original.
- Solr schema has been updated to allow search on normalized mimetype field.
  Replace schema.xml and solrconfig.xml (v3.5.1) on your solr instance.
- Extended the storage size of the mediafile file extension field.
- Fixed file extension extraction when more than one dot is present in filename.
- Fixed problem with mimetype detection when file did not exists.
- md5file no longer generates a error when file does not exists.
-	Upgraded video-js to version 4.2.1.
- Unittests will use default transcode profile.
- Upgraded video-js to version 4.3.0.
- Fixed upgrade path when merging still (data/stills) files into mediafile
  (data) tree.
- Improvements of Asset edit UI.
  - labels and text fields on 1 line
  - no empty collection dropdown on filter.